cloudformation.json
{

  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Jenkins server",

  "Metadata": {
  },

  "Parameters": {

    "AnsibleUrl": {
      "Description": "Ansible playbook location",
      "Default": "https://github.com/dylanjgscott/jenkins.git",
      "Type": "String"
    },

    "AnsibleVersion": {
      "Description": "Ansible playbook version",
      "Type": "String"
    },

    "KeyName": {
      "Description": "SSH key to use",
      "Default": "diogenes",
      "Type": "AWS::EC2::KeyPair::KeyName"
    },

    "InstanceType": {
      "Description": "Instance type to use",
      "Default": "t2.nano",
      "Type": "String"
    },

    "Project": {
      "Description": "Project name",
      "Default": "jenkins",
      "Type": "String"
    }

  },

  "Mappings": {
    "Regions": {
      "ap-south-1": { "ImageId": "ami-66cca709" },
      "eu-west-1": { "ImageId": "ami-809012f3" },
      "ap-southeast-1": { "ImageId": "ami-28588d4b" },
      "ap-southeast-2": { "ImageId": "ami-80e8cae3" },
      "ap-northeast-2": { "ImageId": "ami-84d810ea" },
      "eu-central-1": { "ImageId": "ami-eef91981" },
      "ap-northeast-1": { "ImageId": "ami-04889a6a" },
      "us-east-1": { "ImageId": "ami-65e5f60f" },
      "us-west-1": { "ImageId": "ami-913d42f1" },
      "sa-east-1": { "ImageId": "ami-29e36d45" },
      "us-west-2": { "ImageId": "ami-aeec1bce" }
    }
  },

  "Conditions": {
  },

  "Resources": {

    "Vpc":{
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "InstanceTenancy": "default",
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ]
      }
    },

    "SubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": [ 0, { "Fn::GetAZs": "" } ] },
        "CidrBlock": "192.168.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ],
        "VpcId": { "Ref": "Vpc" }
      }
    },

    "SubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": [ 1, { "Fn::GetAZs": "" } ] },
        "CidrBlock": "192.168.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ],
        "VpcId": { "Ref": "Vpc" }
      }
    },

    "SubnetC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Fn::Select": [ 2, { "Fn::GetAZs": "" } ] },
        "CidrBlock": "192.168.2.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ],
        "VpcId": { "Ref": "Vpc" }
      }
    },

    "InternetGateway":
    {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ]
      }
    },

    "VpcGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "InternetGateway" },
        "VpcId": { "Ref": "Vpc" }
      }
    },

    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "Vpc" },
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ]
      }
    },

    "Route": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" },
        "RouteTableId": { "Ref": "RouteTable" }
      }
    },

    "SubnetRouteTableAssociationA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTable" },
        "SubnetId": { "Ref": "SubnetA" }
      }
    },

    "SubnetRouteTableAssociationB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTable" },
        "SubnetId": { "Ref": "SubnetB" }
      }
    },

    "SubnetRouteTableAssociationC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "RouteTable" },
        "SubnetId": { "Ref": "SubnetC" }
      }
    },

    "InstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Permit ICMP, SSH and HTTPS",
        "SecurityGroupIngress": [
          { "IpProtocol": "icmp", "FromPort": "-1", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" }
        ],
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ],
        "VpcId": { "Ref": "Vpc" }
      }
    },

    "InstanceRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/AdministratorAccess"
        ]
      }
    },

    "InstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          { "Ref": "InstanceRole" }
        ]
      }
    },

    "LaunchConfiguration":{
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "AssociatePublicIpAddress": true,
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeSize": 16,
              "VolumeType": "gp2"
            }
          },
          {
            "DeviceName": "xvda",
            "Ebs": {
              "VolumeSize": 4,
              "VolumeType": "gp2"
            }
          }
        ],
        "EbsOptimized": false,
        "IamInstanceProfile": { "Ref": "InstanceProfile" },
        "ImageId": { "Fn::FindInMap": [ "Regions", { "Ref": "AWS::Region" }, "ImageId" ] },
        "InstanceMonitoring": false,
        "InstanceType": { "Ref": "InstanceType" },
        "KeyName": { "Ref": "KeyName" },
        "PlacementTenancy": "default",
        "SecurityGroups": [
          { "Ref": "InstanceSecurityGroup" }
        ],
        "UserData": { "Fn::Base64": { "Fn::Join": [ "\n", [
          "#!/bin/sh",
          "sysrc firstboot_pkgs_list=\"ansible awscli git python\"",
          "cat > /etc/rc.local << EOF",
          "export PATH=\\$PATH:/usr/local/bin",
          "easy_install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz",
          { "Fn::Join": [ " ", [ "ansible-pull",
            "-e =",
            "-e", { "Fn::Join": [ "=", [ "ansible_python_interpreter", "/usr/local/bin/python" ] ] },
            "-e", { "Fn::Join": [ "=", [ "jenkins_file_system", { "Ref": "FileSystem" } ] ] },
            "-e", { "Fn::Join": [ "=", [ "commit", { "Ref": "AnsibleVersion" } ] ] },
            "-U", { "Ref": "AnsibleUrl" },
            "-C", { "Ref": "AnsibleVersion" }
          ] ] },
          { "Fn::Join": [ " ", [ "cfn-signal",
            "--region", { "Ref": "AWS::Region" },
            "--stack", { "Ref": "AWS::StackName" },
            "--resource AutoScalingGroup",
            "--exit-code \\$?"
          ] ] },
          "EOF"
        ] ] } }
      }
    },

		"AutoScalingGroup": {
			"Type": "AWS::AutoScaling::AutoScalingGroup",
      "CreationPolicy": {
        "ResourceSignal": {
          "Count": 1,
          "Timeout": "PT1H"
        }
      },
      "UpdatePolicy": {
        "AutoScalingRollingUpdate": {
          "MinInstancesInService": 1,
          "PauseTime": "PT1H",
          "WaitOnResourceSignals": true
        }
      },
			"Properties": {
        "DesiredCapacity": 1,
        "HealthCheckType": "EC2",
        "LaunchConfigurationName": { "Ref": "LaunchConfiguration" },
        "MaxSize": 2,
        "MinSize": 1,
        "Tags": [
          { "Key": "Name", "Value": { "Ref": "Project" }, "PropagateAtLaunch": true }
        ],
        "VPCZoneIdentifier": [
          { "Ref": "SubnetA" },
          { "Ref": "SubnetB" },
          { "Ref": "SubnetC" }
        ]
			}
		},

    "MountTargetSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Permit ICMP and NFS",
        "SecurityGroupIngress": [
          { "IpProtocol": "icmp", "FromPort": "-1", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "2049", "ToPort": "2049", "SourceSecurityGroupId": { "Ref": "InstanceSecurityGroup" } }
        ],
        "Tags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ],
        "VpcId": { "Ref": "Vpc" }
      }
    },

    "FileSystem": {
      "Type": "AWS::EFS::FileSystem",
      "Properties": {
        "PerformanceMode": "generalPurpose",
        "FileSystemTags": [ { "Key": "Name", "Value": { "Ref": "Project" } } ]
      }
    },

    "MountTargetA": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
        "FileSystemId": { "Ref": "FileSystem" },
        "SecurityGroups": [ { "Ref": "MountTargetSecurityGroup" } ],
        "SubnetId": { "Ref": "SubnetA" }
      }
    },

    "MountTargetB": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
        "FileSystemId": { "Ref": "FileSystem" },
        "SecurityGroups": [ { "Ref": "MountTargetSecurityGroup" } ],
        "SubnetId": { "Ref": "SubnetB" }
      }
    },

    "MountTargetC": {
      "Type": "AWS::EFS::MountTarget",
      "Properties": {
        "FileSystemId": { "Ref": "FileSystem" },
        "SecurityGroups": [ { "Ref": "MountTargetSecurityGroup" } ],
        "SubnetId": { "Ref": "SubnetC" }
      }
    }

  },

  "Outputs": {
  }

}
